--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-lodash": "^0.1.2",
-    "gulp-rename": "^1.2.2",
-    "gulp-requirejs": "^1.0.0-rc2",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2",
-    "requirejs": "^2.3.3"
+     "gulp-coffee": "^2.3.4",
+     "gulp-concat": "^2.6.1",
+     "gulp-lodash": "^0.1.2",
+     "gulp-notify": "^3.0.0",
+     "gulp-plumber": "^1.1.0",
+     "gulp-rename": "^1.2.2",
+     "gulp-requirejs": "^1.0.0-rc2",
+     "gulp-sass": "^3.1.0",
+     "gulp-uglify": "^2.1.2",
+     "requirejs": "^2.3.3"
 }
 }
